--- a/Biblioteca/nbproject/project.properties
+++ b/Biblioteca/nbproject/project.properties
@@ -31,8 +31,7 @@ file.reference.mysql-connector-java-5.1.45-bin.jar=vendors/mysql-connector-java-
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-java-5.1.45-bin.jar}:\
-    ${reference.Lembredio.jar}
+    ${file.reference.mysql-connector-java-5.1.45-bin.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -62,8 +61,6 @@ manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
-project.Lembredio=../../../../../NetBeansProjects/lembredio/Lembredio
-reference.Lembredio.jar=${project.Lembredio}/dist/Lembredio.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
