--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,11 @@
 version: '3.3'
-volumes:
-  data:
 services:
   db:
     image: mysql:5.6
     ports:
       - "3306:3306"
     volumes:
-      - data:/var/lib/mysql
+      - ./db:/var/lib/mysql
     environment:
       - MYSQL_ROOT_PASSWORD=password
       - MYSQL_DATABASE=biblioteca
